--- a/src/PingApp.Web/Views/Home/Index.cshtml
+++ b/src/PingApp.Web/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@model PingApp.Entity.User
+﻿@model AppListQuery
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@Model
+@section MoreResource {
+<link rel="stylesheet" href="@Url.Content("~/content/list.css")" />
+}
+@Html.Partial("AppList", Model.Result)
