--- a/src/PingApp.Web/Content/variable.less
+++ b/src/PingApp.Web/Content/variable.less
@@ -42,3 +42,6 @@
 .gradient-blue() {
 	.horizontal-linear-gradient(#5e85d2, #3b6ac9);
 }
+.gradient-light-blue() {
+	.horizontal-linear-gradient(lighten(#5e85d2, 10%), lighten(#3b6ac9, 10%));
+}
