--- a/src/PingApp.Web/Content/layout.css
+++ b/src/PingApp.Web/Content/layout.css
@@ -101,13 +101,25 @@ button {
 }
 #navigation ul li {
   float: left;
+}
+#navigation ul li a {
+  display: block;
   font-size: 21px;
   font-weight: bold;
   line-height: 45px;
   padding: 0 18px;
 }
-#navigation ul li.current,
-#navigation ul li:hover {
+#navigation ul li:hover a {
+  background-image: linear-gradient(top, #86a3dd 0, #6388d4 100%);
+  background-image: -moz-linear-gradient(top, #86a3dd 0, #6388d4 100%);
+  background-image: -o-linear-gradient(top, #86a3dd 0, #6388d4 100%);
+  background-image: -ms-linear-gradient(top, #86a3dd 0, #6388d4 100%);
+  background-image: -webkit-linear-gradient(top, #86a3dd 0, #6388d4 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#86a3dd), to(#6388d4));
+  background-color: #7496d9;
+  color: #fff;
+}
+#navigation ul li.current a {
   background-image: linear-gradient(top, #5e85d2 0, #3b6ac9 100%);
   background-image: -moz-linear-gradient(top, #5e85d2 0, #3b6ac9 100%);
   background-image: -o-linear-gradient(top, #5e85d2 0, #3b6ac9 100%);
@@ -115,9 +127,6 @@ button {
   background-image: -webkit-linear-gradient(top, #5e85d2 0, #3b6ac9 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#5e85d2), to(#3b6ac9));
   background-color: #4d78ce;
-}
-#navigation ul li.current a,
-#navigation ul li:hover a {
   color: #fff;
 }
 #search {
