--- a/src/PingApp.Web/Content/layout.less
+++ b/src/PingApp.Web/Content/layout.less
@@ -58,11 +58,10 @@ input[type=submit], button {
 	/* Ads? */
 }
 #navigation {
-	background-color: @backgroundGray;
 	padding: 0 14px;
 	margin-bottom: 26px;
-	border-top: 1px solid darken(@backgroundGray, 10%);
-	border-bottom: 1px solid darken(@backgroundGray, 5%);
+	border-top: 1px solid darken(@silverGray, 10%);
+	border-bottom: 1px solid darken(@silverGray, 5%);
 	position: relative;
 	ul {
 		.clear-float;
@@ -87,7 +86,6 @@ input[type=submit], button {
 	}
 }
 #search {
-	@darkGray: #676767;
 	@borderWidth: 4px;
 	position: absolute;
 	top: 6px;
@@ -132,7 +130,7 @@ input[type=submit], button {
     overflow: hidden;
 }
 #footer {
-	background-color: @backgroundGray;
+	background-color: @silverGray;
 	@horizontalPadding: 16px;
 	padding: 20px @horizontalPadding;
 	nav {
