--- a/src/PingApp.Web/Content/variable.less
+++ b/src/PingApp.Web/Content/variable.less
@@ -3,13 +3,17 @@
 @fontSizeLarge: 21px;
 @fontFamily: "\5FAE\8F6F\96C5\9ED1", sans-serif;
 
-@linkColor: #36c;
-@linkHoverColor: darken(#36c, 30%);
-@backgroundGray: #efefef;
+/* Color */
+@crystalBlue: #36c;
+@silverGray: #efefef;
+@lightGray: #999;
+@darkGray: #676767;
+@linkColor: @crystalBlue;
+@linkHoverColor: darken(@crystalBlue, 30%);
 
 @pageWidth: 960px;
 
-@textShadowSlight: #999 1px 2px 3px;
+@textShadowSlight: @lightGray 1px 2px 3px;
 
 .clear-float() {
 	zoom: 1;
