Add margin to footer

--- a/src/PingApp.Web/Content/layout.less
+++ b/src/PingApp.Web/Content/layout.less
@@ -133,6 +133,7 @@ input[type=submit], button {
 	background-color: @silverGray;
 	@horizontalPadding: 16px;
 	padding: 20px @horizontalPadding;
+	margin-top: 60px;
 	nav {
 		.clear-float;
 		div {
