--- a/src/PingApp.Web/Content/variable.less
+++ b/src/PingApp.Web/Content/variable.less
@@ -1,6 +1,7 @@
 ﻿@fontSizeNormal: 14px;
 @fontSizeLarger: 16px;
 @fontSizeLarge: 21px;
+@fontSizeXLarge: 30px;
 @fontFamily: "\5FAE\8F6F\96C5\9ED1", sans-serif;
 
 /* Color */
@@ -48,4 +49,7 @@
 }
 .gradient-light-blue() {
 	.horizontal-linear-gradient(lighten(#5e85d2, 10%), lighten(#3b6ac9, 10%));
+}
+.gradient-dark-blue() {
+	.horizontal-linear-gradient(darken(#5e85d2, 10%), darken(#3b6ac9, 10%));
 }
