Add focus style to textbox

--- a/src/PingApp.Web/Content/layout.css
+++ b/src/PingApp.Web/Content/layout.css
@@ -218,6 +218,10 @@ input.text {
   border-radius: 3px;
   padding: 1px 6px 1px 0;
 }
+input.text:focus {
+  outline: none;
+  box-shadow: 0 0 4px #676767;
+}
 .form-mini .form-field {
   margin: 6px 0;
 }
