--- a/src/PingApp.Web/Content/layout.less
+++ b/src/PingApp.Web/Content/layout.less
@@ -164,7 +164,11 @@ input.text {
 	border: 2px solid @darkGray;
 	background-color: transparent;
 	border-radius: 3px;
-		padding: 1px 6px 1px 0;
+	padding: 1px 6px 1px 0;
+}
+input.text:focus {
+	outline: none;
+	box-shadow: 0 0 4px @darkGray;
 }
 
 .form-mini {
