--- a/src/PingApp.Web/Content/home.less
+++ b/src/PingApp.Web/Content/home.less
@@ -13,7 +13,7 @@
 			width: @headingHeight;
 			height: @headingHeight;
 			margin-top: -20px;
-			.replace-with-background("images/logo-app.png");
+			.replace-with-background("images/logo.png", -(210px - 66px), 0); // LOGO宽610，右边的APP字样宽66
 		}
 	}
 	form {
