Background color of new pricce element

--- a/src/PingApp.Web/Content/home.less
+++ b/src/PingApp.Web/Content/home.less
@@ -78,12 +78,17 @@
 		}
 		.new-price {
 			display: inline-block;
-			.gradient-light-blue;
 			border-radius: 5px;
 			width: 70px;
 			text-align: center;
 			color: #fff;
 			padding: 4px 0;
+		}
+		.price-decrease {
+			background-color: #75d1a3;
+		}
+		.price-free {
+			background-color: #7497dc;
 		}
 		&:hover {
 			background-color: darken(@silverGray, 10%);
