--- a/src/PingApp.Web/Content/home.css
+++ b/src/PingApp.Web/Content/home.css
@@ -94,18 +94,17 @@
 }
 .app-grid li .new-price {
   display: inline-block;
-  background-image: linear-gradient(top, #86a3dd 0, #6388d4 100%);
-  background-image: -moz-linear-gradient(top, #86a3dd 0, #6388d4 100%);
-  background-image: -o-linear-gradient(top, #86a3dd 0, #6388d4 100%);
-  background-image: -ms-linear-gradient(top, #86a3dd 0, #6388d4 100%);
-  background-image: -webkit-linear-gradient(top, #86a3dd 0, #6388d4 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#86a3dd), to(#6388d4));
-  background-color: #7496d9;
   border-radius: 5px;
   width: 70px;
   text-align: center;
   color: #fff;
   padding: 4px 0;
+}
+.app-grid li .price-decrease {
+  background-color: #75d1a3;
+}
+.app-grid li .price-free {
+  background-color: #7497dc;
 }
 .app-grid li:hover {
   background-color: #d6d6d6;
