--- a/src/PingApp.Web/Views/Home/Index.cshtml
+++ b/src/PingApp.Web/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         <span class="new-price price-decrease">￥@item.App.LastValidUpdate.NewValue</span>
         }
         else {
-        <span class="new-price price-free">Free</span>
+        <span class="new-price price-free">FREE</span>
         }
     </li> 
 	}
