--- a/src/PingApp.Web/Content/home.less
+++ b/src/PingApp.Web/Content/home.less
@@ -73,10 +73,10 @@
 			color: red;
 			font-size: 20px;
 			text-decoration: line-through;
-			display: inline-block;
 			padding: 2px 0;
 		}
 		.new-price {
+			font-weight: bold;
 			display: inline-block;
 			border-radius: 5px;
 			width: 70px;
