--- a/src/PingApp.Web/Content/home.css
+++ b/src/PingApp.Web/Content/home.css
@@ -32,12 +32,118 @@
 }
 #priceDecreaseRecommendations,
 #priceFreeRecommendations {
+  width: 660px;
   margin-top: 40px;
 }
-#priceDecreaseRecommendations h3,
-#priceFreeRecommendations h3 {
+#priceDecreaseRecommendations header,
+#priceFreeRecommendations header {
+  zoom: 1;
+  /* Must be ":" for IE8 */
+
+  margin-bottom: 12px;
+}
+#priceDecreaseRecommendations header:after,
+#priceFreeRecommendations header:after {
+  content: ".";
+  display: block;
+  width: 0;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+  clear: both;
+}
+#priceDecreaseRecommendations header h3,
+#priceFreeRecommendations header h3 {
+  float: left;
   font-size: 30px;
   text-shadow: #999999 1px 2px 3px;
+}
+#priceDecreaseRecommendations header .toolbar,
+#priceFreeRecommendations header .toolbar {
+  float: right;
+}
+#priceDecreaseRecommendations header .toolbar > a,
+#priceFreeRecommendations header .toolbar > a,
+#priceDecreaseRecommendations header .toolbar > div,
+#priceFreeRecommendations header .toolbar > div {
+  float: right;
+  width: 100px;
+  padding: 10px 0 8px;
+  background-image: linear-gradient(top, #999999 0, #666666 100%);
+  background-image: -moz-linear-gradient(top, #999999 0, #666666 100%);
+  background-image: -o-linear-gradient(top, #999999 0, #666666 100%);
+  background-image: -ms-linear-gradient(top, #999999 0, #666666 100%);
+  background-image: -webkit-linear-gradient(top, #999999 0, #666666 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#999999), to(#666666));
+  background-color: #808080;
+  border-radius: 5px;
+  box-shadow: 0 1px 6px #676767;
+  text-align: center;
+  font-size: 16px;
+  margin-left: 10px;
+}
+#priceDecreaseRecommendations header .toolbar > a:hover,
+#priceFreeRecommendations header .toolbar > a:hover,
+#priceDecreaseRecommendations header .toolbar > div:hover,
+#priceFreeRecommendations header .toolbar > div:hover {
+  background-image: linear-gradient(top, #808080 0, #4d4d4d 100%);
+  background-image: -moz-linear-gradient(top, #808080 0, #4d4d4d 100%);
+  background-image: -o-linear-gradient(top, #808080 0, #4d4d4d 100%);
+  background-image: -ms-linear-gradient(top, #808080 0, #4d4d4d 100%);
+  background-image: -webkit-linear-gradient(top, #808080 0, #4d4d4d 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#808080), to(#4d4d4d));
+  background-color: #666666;
+}
+#priceDecreaseRecommendations header .toolbar > a,
+#priceFreeRecommendations header .toolbar > a {
+  color: #fff;
+  font-weight: bold;
+}
+.dropdown {
+  overflow: hidden;
+  position: relative;
+}
+.dropdown .selected-value {
+  color: #fff;
+  font-weight: bold;
+}
+.dropdown .selected-value::after {
+  content: ">";
+}
+.dropdown ul {
+  width: 200%;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  border: 1px solid #999999;
+  border-radius: 0 5px 5px 5px;
+  background-color: #efefef;
+  box-shadow: 0 1px 6px #676767;
+  opacity: 0;
+}
+.dropdown ul li {
+  float: left;
+  width: 50%;
+}
+.dropdown ul li span {
+  display: block;
+  padding: 4px 0;
+  color: #3366cc;
+  cursor: pointer;
+}
+.dropdown ul li span:hover {
+  background-color: #3366cc;
+  color: #fff;
+}
+.dropdown:hover {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  overflow: visible;
+}
+.dropdown:hover ul {
+  display: block;
+  opacity: 1;
+  -webkit-transition: all .2s linear;
 }
 .app-grid {
   width: 660px;
