--- a/src/PingApp.Web/Content/variable.less
+++ b/src/PingApp.Web/Content/variable.less
@@ -41,7 +41,13 @@
 	text-overflow: ellipsis;
 }
 
-
+.transition(@property, @duration, @function) {
+	transition: @property @duration @function;
+	-ms-transition: @property @duration @function;
+	-moz-transition: @property @duration @function;
+	-o-transition: @property @duration @function;
+	-webkit-transition: @property @duration @function;
+}
 .horizontal-linear-gradient(@from, @to) {
 	background-image: linear-gradient(top, @from 0, @to 100%);
 	background-image: -moz-linear-gradient(top, @from 0, @to 100%);
@@ -59,4 +65,13 @@
 }
 .gradient-dark-blue() {
 	.horizontal-linear-gradient(darken(#5e85d2, 10%), darken(#3b6ac9, 10%));
+}
+.gradient-gray() {
+	.horizontal-linear-gradient(#999, #666);
+}
+.gradient-light-gray() {
+	.horizontal-linear-gradient(lighten(#999, 10%), lighten(#666, 10%));
+}
+.gradient-dark-gray() {
+	.horizontal-linear-gradient(darken(#999, 10%), darken(#666, 10%));
 }
